# jayboy

./: .gitignore  Cargo.toml  README.md
jayboy/: Cargo.toml
jayboy/src/: main.rs  rom_scanner.rs
lib_jayboy/: Cargo.toml
lib_jayboy/src/: cpu.rs  cpu_flags.rs  errors.rs  lib.rs  logger.rs  memory.rs  opcodes.rs  registers.rs  text.rs  timer.rs
lib_jayboy/src/formatting/: formatter_builder.rs  mod.rs
lib_jayboy/src/instructions/: instruction.rs  instruction_reader.rs  instructions.rs  mod.rs
lib_jayboy/src/native/: gbi8.rs  gbstr.rs  gbtext.rs  gbu16.rs  gbu8.rs  gbyte.rs  gbytes.rs  mod.rs
lib_jayboy/src/roms/: cart.rs  cart_type.rs  cartridge.rs  cgbflag.rs  licensee.rs  mod.rs  publisher.rs
lib_jayboy/tests/: cart_tests.rs  tests.rs
src/: cpu.rs  logger.rs  main.rs  memory.rs  opcodes.rs  prelude.rs  registers.rs  timer.rs
src/roms/: cart.rs  mod.rs
