[package]
name = "jayboy"
version = "0.0.1"
authors = ["Timothy Jay <TimothyRJay@gmail.com>"]
edition = "2021"

[dependencies]
# logging + timing
chrono = "0.4.26"
# flagged enums
bitflags = "2.3.2"
# primitive enums
num_enum = "0.6.1"
# easy error handling
anyhow = "1.0.71"
# Game Boy is little-endian
byteorder = "1.4.3"