[package]
name = "lib_jayboy"
version = "0.0.1"
authors = ["Timothy Jay <TimothyRJay@gmail.com>"]
edition = "2021"

[dependencies]
# logging + timing
chrono = "0.4.26"
# flagged enums
bitflags = "2.3.2"
# primitive enums
num_enum = "0.6.1"
# easy error handling
anyhow = "1.0.71"
thiserror = "1.0.43"
# Game Boy is little-endian
byteorder = "1.4.3"
# testing
rand = "0.8.5"
# static variables
lazy_static = "1.4.0"
# logging
log = "0.4.19"
simplelog = "0.12.1"
# JSON
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"